crates/frontend/tests/type_errors/non_struct_idx.nemo
fn main() {
  10.x;
  let x = 20;
  set x.y = 10
}